# netcfgbu

./: .gitignore  .jscpd.json  .mega-linter.yml  .pre-commit-config.yaml  .pylintrc  .ruff.toml  MANIFEST.in  README.md  RELEASE-NOTES.md  pyproject.toml  requirements-develop.txt  requirements.txt  ruff.toml  setup.py  tasks.py  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  megalinter.yml  python-publish.yml
docs/: QuickStart.md  TOC.md  commands.md  config-credentials.md  config-inventory-integrations.md  config-ospec.md  config-osspec-custom-connectors.md  config-ssh-jumphost.md  config-ssh-options.md  config-vcs-git.md  configuration-file.md  environment_variables.md  inventory.md  mkbadges.sh  motivation.md  plugins.md  troubleshooting.md  usage-filtering.md  usage-vcs.md
examples/: inventory.csv  netcfgbu.toml
netbox/: README.md  netbox_inventory.py
netcfgbu/: __init__.py  aiofut.py  config.py  config_model.py  consts.py  filetypes.py  filtering.py  inventory.py  jumphosts.py  linter.py  logger.py  main.py  os_specs.py  plugins.py  probe.py
netcfgbu/cli/: __init__.py  backup.py  common.py  example.py  inventory.py  lint.py  login.py  main.py  probe.py  report.py  root.py  vcs.py
netcfgbu/connectors/: __init__.py  basic.py  ssh.py
netcfgbu/examples/: example_inventory.csv  example_netcfgbu.toml
netcfgbu/vcs/: __init__.py  git.py
tests/: __init__.py  conftest.py  test_cli_inventory.py  test_cli_probe.py  test_cli_vcs.py  test_config.py  test_connectors.py  test_filetypes.py  test_filtering.py  test_inventory.py  test_jumphosts.py  test_linters.py  test_os_name.py  test_os_name_prompt_pattern.py  test_plugins.py  test_probe.py  test_vcs.py
tests/files/: test-just-defaults.toml
tests/files/plugins/: test-plugin.py
