[tool.poetry]
name = "netcfgbu"
version = "1.0.0"
description = "Network Configuration Backup"
authors = ["Jeremy Schulman", "Ryan Merolle"]
license = "Apache Software License"
readme = "README.md"
repository = "https://github.com/ryanmerolle/netcfgbu"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking"
]

[tool.poetry.scripts]
netcfgbu = "netcfgbu.main:main"

[virtualenvs]
virtualenvs.create = true
virtualenvs.in-project = true
virtualenvs.path = ".venv"

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "*"
asyncssh = "*"
toml = "*"
pydantic = "2.7.*"
pydantic-settings = "*"
tabulate = "*"
click = "*"
first = "*"
pexpect = "*"
types-tabulate = "*"
types-first = "*"
types-aiofiles = "*"
types-toml = "*"

[tool.poetry.group.dev.dependencies]
asynctest = "*"
#black = "*"
#flake8 = "*"
#flake8-breakpoint = "*"
interrogate = "*"
invoke = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
requests = "*"
ruff = "*"
sourcery-analytics = "*"
tox = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["setup.py", "tasks.py", "bin"]
